Fix command tests